--- a/dcal.css
+++ b/dcal.css
@@ -64,6 +64,7 @@ body {
   font-weight: bold;
   cursor: pointer;
   border-radius: 10px;
+  border: none;
   
 }
 .toggbtn:hover{
@@ -102,3 +103,4 @@ body {
 .hidden {
   display: none;
 }
+
